plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
    id 'io.freefair.lombok' version '6.5.1'
    id 'com.diffplug.spotless' version '6.12.0'
}

group 'yt.graven'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = '16'

repositories {
    mavenCentral()
    maven {
        url 'https://jitpack.io/'
    }
}

dependencies {
    implementation 'net.dv8tion:JDA:5.0.0-alpha.12'
    implementation 'me.carleslc.Simple-YAML:Simple-Yaml:1.7.2'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.springframework:spring-context:5.3.20'
    implementation 'javax.inject:javax.inject:1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'club.minnced:discord-webhooks:0.8.0'
    implementation 'com.google.code.gson:gson:2.9.0'
}

test {
    useJUnitPlatform()
}

shadowJar {
    project.configurations.implementation.canBeResolved(true)
    configurations = [project.configurations.implementation]
}

application {
    mainClassName = 'yt.graven.gravensupport.Main'
    setApplicationDefaultJvmArgs(["--add-opens", "java.base/java.net=ALL-UNNAMED"])
}

compileJava {
    manifest {
        attributes('Main-Class': 'yt.graven.gravensupport.Main')
    }
    options.encoding = "UTF-8"
    dependsOn "spotlessApply"
}

spotless {
    java {
        googleJavaFormat('1.15.0')

        importOrder()
        removeUnusedImports()
        formatAnnotations()
        trimTrailingWhitespace()
    }
}
